Mon Apr 26 11:25:58 1993  Ian Lance Taylor  (ian@cygnus.com)

	* sco-core.c (sco_core_vec): Add initializers for new target
	fields.

Sat Apr 24 21:33:45 1993  Jim Kingdon  (kingdon@cygnus.com)

	* coffcode.h [_LIT]: Recognize .lit section.

Fri Apr 23 19:00:36 1993  Steve Chamberlain  (sac@thepub.cygnus.com)

	* coff-alpha.c, cpu-alpha.c, config/alphaosf.mt,
	config/alphaosf.mt, hosts/alphaosf.h:  New files.

Fri Apr 23 16:48:46 1993  Stu Grossman  (grossman@cygnus.com)

	* Merge in HPPA/BSD changes from Utah.
	* hppa.c:  Use this for both HPUX & BSD.
	* targets.c:  Enable hppa_vec for both HPUX & BSD.
	* config/hppabsd.mt:  TDEFINES => TDEFAULTS.
	* hosts/hppabsd.h:  #define HOST_HPPABSD.

Wed Apr 21 01:50:10 1993  John Gilmore  (gnu@cygnus.com)

	* libbfd.c:  Whitespace changes around byteswap macros.
	* libbfd-in.h:  Whitespace changes around byteswap declarations.

Tue Apr 20 15:59:07 1993  Stu Grossman  (grossman@cygnus.com)

	* aoutf1.h (sunos4_core_file_p):  Don't default bfd_error to
	system_error anymore.  It confuses bfd_check_format().

Mon Apr 19 23:03:08 1993  Stu Grossman  (grossman@cygnus.com)

	* bfd.c:  Add sgi_core_data to tdata union.
	* coff-mips.c:  Add Irix 4.x core file support.
	* hosts/irix4.h:  #define HOST_IRIX4.

Mon Apr 19 18:52:52 1993  Ken Raeburn  (raeburn@deneb.cygnus.com)

	* aoutx.h (translate_from_native_sym_flags): Check that the
	symbol's section does get set.
	(slurp_symbol_table): Zero index means null-string name.

	* aoutx.h (struct stringtab_entry, struct stringtab_data): New
	data structures.
	(hash, stringtab_init, add_to_stringtab, emit_strtab, compare):
	New functions.
	(write_syms): Use them, to reduce string table size.

Mon Apr 19 16:45:12 1993  Fred Fish  (fnf@cygnus.com)

	* trad-core.c (trad_core_vec):  Add 6 new initializers to match
	  new signed get/put fields.  Minor reformatting to label
	  some fields.

Mon Apr 19 06:09:41 1993  Jim Kingdon  (kingdon@cygnus.com)
